--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="AI生成のハリネズミ専門サイトです。">
   <meta property="og:title" content="ハリネズミのWEBサイト">
   <meta property="og:description" content="ハリの世界へようこそ。">
-  <meta property="og:image" content="harired.png">
+  <meta property="og:image" content="hari.png">
   <style>
     body {
       font-family: Arial, sans-serif;
