--- a/Index.html
+++ b/Index.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ハリネズミ</title>
-  <meta name="description" content="AI生成のハリネズミ専門サイトです。">
+  <title>ハリネズミの可愛い写真ギャラリー | ハリネズミ専門サイト</title>
+  <meta name="description" content="AI生成のハリネズミ専門サイトです。可愛いハリネズミの写真をギャラリーでお楽しみください。">
   <meta property="og:title" content="ハリネズミのWEBサイト">
   <meta property="og:description" content="ハリの世界へようこそ。">
-  <meta property="og:image" content="hari.png">
+  <meta property="og:image" content="harired.png">
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: url('hari.png') repeat;
+      background: url('harired.png') repeat; background-size: 200px 200px;
       background-size: 200px 200px;
       color: #333;
     }
 
     .container {
       max-width: 1200px;
-      margin: 0 auto;
+      margin: 20px auto;
       padding: 20px;
-      background-color: rgba(255, 255, 255, 0.9);
+      background-color: rgba(239, 234, 222, 0.5);
       border-radius: 10px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
@@ -45,7 +45,7 @@
     .image-gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
+      gap: 15px;
       margin-bottom: 40px;
     }
 
@@ -88,24 +88,24 @@
     </div>
 
     <div class="image-gallery">
-      <img src="akinohari.jpg" alt="Gallery Image 1">
-      <img src="Hana.jpg" alt="Gallery Image 2">
-      <img src="niko.jpg" alt="Gallery Image 3">
-      <img src="kawaii.jpg" alt="Gallery Image 4">
+      <img src="akinohari.jpg" alt="秋のハリネズミ" loading="lazy">
+      <img src="Hana.jpg" alt="花とハリネズミ" loading="lazy">
+      <img src="niko.jpg" alt="笑顔のハリネズミ" loading="lazy">
+      <img src="kawaii.jpg" alt="可愛いハリネズミ" loading="lazy">
     </div>
 
     <div class="image-gallery">
-      <img src="hariItigo.jpg" alt="Gallery Image 5">
-      <img src="bahahari.jpg" alt="Gallery Image 6">
-      <img src="apple.jpg" alt="Gallery Image 7">
-      <img src="irasuto.jpg" alt="Gallery Image 8">
+      <img src="hariItigo.jpg" alt="イチゴとハリネズミ" loading="lazy">
+      <img src="bahahari.jpg" alt="遊ぶハリネズミ" loading="lazy">
+      <img src="apple.jpg" alt="りんごとハリネズミ" loading="lazy">
+      <img src="irasuto.jpg" alt="ハリネズミのイラスト" loading="lazy">
     </div>
 
     <div class="image-gallery">
-      <img src="1.jpg" alt="Gallery Image 9">
-      <img src="2.jpg" alt="Gallery Image 10">
-      <img src="3.jpg" alt="Gallery Image 11">
-      <img src="4.jpg" alt="Gallery Image 12">
+      <img src="1.jpg" alt="ハリネズミの写真1" loading="lazy">
+      <img src="2.jpg" alt="ハリネズミの写真2" loading="lazy">
+      <img src="3.jpg" alt="ハリネズミの写真3" loading="lazy">
+      <img src="4.jpg" alt="ハリネズミの写真4" loading="lazy">
     </div>
   </div>
 </body>
