--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta name="description" content="AI生成のハリネズミ専門サイトです。可愛いハリネズミの写真をギャラリーでお楽しみください。">
   <meta property="og:title" content="ハリネズミのWEBサイト">
   <meta property="og:description" content="ハリの世界へようこそ。">
-  <meta property="og:image" content="harired.png">
+  <meta property="og:image" content="hari.png">
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: url('harired.png') repeat; background-size: 200px 200px;
+      background: url('hari.png') repeat; background-size: 200px 200px;
       background-size: 200px 200px;
       color: #333;
     }
