--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ハリネズミの可愛い写真ギャラリー | ハリネズミ専門サイト</title>
+  <title>ハリネズミの可愛い写真ギャラリー | AIハリネズミ画像専門サイト</title>
   <meta name="description" content="AI生成のハリネズミ専門サイトです。可愛いハリネズミの写真をギャラリーでお楽しみください。">
   <meta property="og:title" content="ハリネズミのWEBサイト">
-  <meta property="og:description" content="ハリの世界へようこそ。">
+  <meta property="og:description" content="ハリネズミの世界へようこそ。">
   <meta property="og:image" content="hari.png">
   <style>
     body {
