--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
   </style>
 </head>
 <body>
+  <meta name="google-site-verification" content="HZJJC1--0JtuTm0uq6Dywj0sPbMgi2AXUa4MXRkSODA" />
   <div class="container">
     <div class="content">
       <h1>ハリネズミのWEBサイト</h1>
